# apiary-rust

./: .env  .gitignore  Cargo.toml
backend/: .env  .gitignore  Cargo.toml
backend/common-utils/: Cargo.toml
backend/migrations/: 20220101205023_account.up.sql  20220101210234_apiary.down.sql  20220101210234_apiary.up.sql  20220104161938_event.down.sql  20220104161938_event.up.sql  20220104184855_account_apiary.up.sql
backend/server/: run.sh  supergraph.graphql
backend/svc-account/: .env
backend/svc-account-apiary/: .env  Cargo.toml
backend/svc-apiary/: .env  Cargo.toml
backend/svc-event/: .env  Cargo.toml
frontend/: package-lock.json  package.json
frontend/src/: App.js  index.js
migrations/: 20211211193312_user.down.sql  20211211193312_user.up.sql  20211221161758_apiary.down.sql  20211221161758_apiary.up.sql  20220101210234_apiary.up.sql  20220104161938_event.up.sql  20220104184855_account_apiary.down.sql
server/: package-lock.json  package.json  run.sh  supergraph-config.yaml  supergraph.graphql
src/: main.rs  model.rs
src/database/: mod.rs
svc-account/: Cargo.toml
svc-account-apiary/: .env
svc-account-apiary/src/: main.rs  query.rs
svc-account-apiary/static/: AddGarden.css  AddNote.html  AddPlant.css  AddTask.css  ManageAccount.css  MyGardens.html  MyPlants.html  nicepage.css
svc-account/migrations/: 20220101205023_account.up.sql
svc-account/src/: main.rs  mod.rs  mutation.rs  query.rs  role_guard.rs
svc-apiary/: .env  Cargo.toml
svc-apiary/src/: apiary.rs  main.rs  mutation.rs  query.rs
svc-event/: Cargo.toml
(+47 files in other folders)
