[package]
name = "rust-main"
version = "0.0.1"
authors = ["Jakub Blaszczyk <jablaszczyk@hotmail.com>"]
edition = "2021"

[dependencies]
actix-web = "4.0.0-beta.14"
anyhow = "1.0.51"
async-graphql = {version = "3.0.15", default-features = false, features = ["uuid"] }
async-graphql-actix-web = "3.0.15"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.14"
serde = "1.0.131"
tokio = { version = "1.14.0", features = ["full"] }
sqlx = { version = "0.5.9", features = ["runtime-actix-native-tls","uuid","postgres","chrono"] }
uuid = { version = "0.8.2", features = ["serde","v4"] }